# stark-evm-adapter

./: .gitignore  Cargo.toml  Dockerfile  README.md  aggregated_proof.json  crates.js  debug_merkle_lines  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: docs.yml  rust.yml
examples/: bootloader_verify_proof_register_args.json  gen-annotated-proof.sh  original.json  verify_stone_proof.rs
examples/bootloader/: Dockerfile  Makefile  README.md  cpu_air_params.json  fib_annotated_proof.json  fibonacci_compiled.json  requirements.txt  test_bootloader_fib.py  test_compiled_bootloader.json
search.desc/stark_evm_adapter/: stark_evm_adapter-desc-0-.js
src/: annotated_proof.rs  annotation_parser.rs  errors.rs  fri_merkle_statement.rs  lib.rs  merkle_statement.rs  oods_statement.rs  serialization.rs
src/stark_evm_adapter/: annotated_proof.rs.html  annotation_parser.rs.html  errors.rs.html  fri_merkle_statement.rs.html  lib.rs.html  merkle_statement.rs.html  oods_statement.rs.html  serialization.rs.html  stark-evm-adapter.rs.html
stark_evm_adapter/: all.html  fn.default_prime.html  fn.main.html  index.html  sidebar-items.js  type.ContractFunctionCall.html
stark_evm_adapter/annotated_proof/: index.html  sidebar-items.js  struct.AnnotatedProof.html  struct.FriParameters.html  struct.MemorySegment.html  struct.ProofParameters.html  struct.PublicInput.html  struct.PublicMemory.html  struct.StarkParameters.html
stark_evm_adapter/annotation_parser/: fn.gen_fri_merkle_statement_call.html  fn.gen_merkle_statement_call.html  fn.parse_fri_merkles_original.html  fn.split_fri_merkle_statements.html  index.html  sidebar-items.js  struct.AnnotatedProof.html  struct.CommitmentLine.html  struct.EvalPointLine.html  struct.FriExtras.html  (+6 more)
tests/: annotation_parser.rs  expected_split_fri_proofs.json
(+86 files in other folders)
