[package]
name = "stark_evm_adapter"
version = "0.1.4"
edition = "2021"
authors = ["zksecurity <hello@zksecurity.xyz>"]
description = "a lib/CLI for adapting STARK proofs for verification on the EVM"
repository = "https://github.com/zksecurity/stark-evm-adapter"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["hex"] }
regex = "1"
num-bigint = "0.4"
num-traits = "0.2"
ethers = { version = "2.0", features = ["abigen", "ethers-solc"] }
thiserror = "1.0.50"
clap="3.1.5"
eyre = "0.6"

[dev-dependencies]
assert-json-diff = "2.0.2"
tokio = { version = "1", features = ["full"] }
